Fix extra spaces around hh/mm/ss in time view

--- a/src/app/timers/time-view/time-view.component.scss
+++ b/src/app/timers/time-view/time-view.component.scss
@@ -3,8 +3,8 @@
 }
 
 .timeUnit {
-  font-size: 50%;
+  font-size: 66%;
   opacity: 0.35;
   margin-left: 0.2em;
-  margin-right: 0.2em;
+  margin-right: 0.3em;
 }
